added favicon and project links

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
     crossorigin="anonymous"
   />
+  <link rel="shortcut icon" href="./favicon.ico.jpg" type="image/x-icon" />
    
-    <title>React App</title>
+    <title>Chirag Agrawal | FrontEnd Dev | Reactjs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
